center the div in profile page

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6248,7 +6248,7 @@ a.badge:focus {
 .container-fluid .jumbotron {
   border-radius: 6px;
   width: 40%;
-  margin-left: 35rem;
+  margin-left: 29%;
 }
 
 .jumbotron .container {
