--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -5,7 +5,7 @@
   <div class="container">
 
     <div class="row justify-content-center">
-      <div class="col-lg-8  col-12 jumbotron">
+      <div class="col-lg-8 col-12 jumbotron">
         <form>
           <div class="form-group">
             <label>
@@ -26,10 +26,13 @@
             </label>
             <p class=useremail>{{user.email}}</p>
           </div>
-          <div class="form-group" name="userimageform" id="userimageform">
-            <label for="userimage">
-              <h2>Uploaded Product</h2>
+          <div class="form-group">
+            <label>
+              <h2>Phone</h2>
             </label>
+            <p class=useremail>{{user.phone}}</p>
+          </div>
+          <div class="form-group" name="userimageform" id="userimageform">
             {{!-- <p class="uploadedimages">{{products.image_name}}</p> --}}
 
             <hr>
