--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -42,7 +42,7 @@
                         <span class="current_price">${{product.price}}</span>
                     </div>
                     <div class="product_ratting">
-                        <a href="#comments">1 Review</a>
+                        <a href="#comments">{{reviews}} Review</a>
                     </div>
                     <div class="product_description">
                         <p>{{product.p_description}}</p>
