--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
     <!-- Main container -->
     <nav class="navbar">
         <div class="col-sm-3">
-            <div class="nav-left">
+            <div class="nav-left nav-logo">
                 <a href="http://localhost:3000/"><img src="../../public/imgs/logo.jpg" alt="MarketIT" id="top-log" class="top-log nav-img" /></a>
                 <a href="http://localhost:3000/" class="market-it">Market IT</a>
             </div>
