html markup changes

--- a/views/buy.handlebars
+++ b/views/buy.handlebars
@@ -50,7 +50,7 @@
                         </div>
                         <label for="text_input">Send Message to Seller :</label>
                         <div class="form-group message-textarea">
-                            <textarea type="text" rows="3" cols="30" class="form-control" id="text_input" name="message"
+                            <textarea rows="3" cols="30" class="form-control" id="text_input" name="message"
                                 placeholder="Message"></textarea>
                         </div>
                         <button type="submit" class="comment-button" id="comment-button">Send Message</button>
