--- a/views/dashboardlog.handlebars
+++ b/views/dashboardlog.handlebars
@@ -19,7 +19,7 @@
 		<div class="container fill-bloc-bottom-edge">
 			<div class="row">
 				<div class="col-sm-12">
-					<a id="scroll-hero" class="blocs-hero-btn-dwn" href="#" alt="down"><span class="fa fa-chevron-down" alt="down"></span></a>
+					<a id="scroll-hero" class="blocs-hero-btn-dwn" href="#"><span class="fa fa-chevron-down"></span></a>
 				</div>
 			</div>
 		</div>
@@ -34,6 +34,5 @@
 
 <!-- Preloader -->
 <div id="page-loading-blocs-notifaction"></div>
-</div>
 
 <!-- Preloader END -->
