--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,3 +106,13 @@
     min-height: 100%;
     min-width: 100%;
 }
+.clsLabelforFields{
+    font-size: 30px;
+    padding-right: 10px ;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-family: 'Domine';
+    font-weight: 500;
+    line-height: 1.1;
+    color: inherit;
+}
