--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -8,31 +8,28 @@
       <div class="col-lg-8 col-12 jumbotron">
         <form>
           <div class="form-group">
-            <label>
-              <h2>First Name</h2>
+            <label class="clsLabelforFields">
+              First Name
             </label>
-            <p class=username>{{user.firstName}}</p>
+            <p class="username">{{user.firstName}}</p>
           </div>
 
           <div class="form-group">
-            <label>
-              <h2>Last Name</h2>
+            <label class="clsLabelforFields">Last Name
             </label>
-            <p class=username>{{user.lastName}}</p>
+            <p class="username">{{user.lastName}}</p>
           </div>
           <div class="form-group">
-            <label>
-              <h2>Email</h2>
+            <label class="clsLabelforFields">Email
             </label>
-            <p class=useremail>{{user.email}}</p>
+            <p class="useremail">{{user.email}}</p>
           </div>
           <div class="form-group">
-            <label>
-              <h2>Phone</h2>
+            <label class="clsLabelforFields">Phone
             </label>
-            <p class=useremail>{{user.phone}}</p>
+            <p class="useremail">{{user.phone}}</p>
           </div>
-          <div class="form-group" name="userimageform" id="userimageform">
+          <div class="form-group" id="userimageform">
             {{!-- <p class="uploadedimages">{{products.image_name}}</p> --}}
 
             <hr>
@@ -59,18 +56,22 @@
             <img src="../{{this.image_path}}" alt="img">
           </div>
           <label for="info-button"></label>
-          <button id="info-button" onclick="deleteTab(this,'{{this.posterId}}')" class='aui_close clsDeleteGoal pull-right' value={{this.product_id}}>X</span></button>
-          <span>
-            <div class="info-pro-name">&nbsp;{{this.p_name}}</div>
-          </span>
-          <span>
-            <div class="info-pro-price">&nbsp;&nbsp;${{this.price}}</div>
-          </span>
+          <button id="info-button" onclick="deleteTab(this,'{{this.posterId}}')" class='aui_close clsDeleteGoal pull-right'
+            value={{this.product_id}}>X</button>
+          <div class="info-pro-name">
+            <span>
+              &nbsp;{{this.p_name}}
+            </span></div>
+          <div class="info-pro-price">
+            <span>
+              &nbsp;&nbsp;${{this.price}}
+            </span>
+          </div>
           <br>
           <form action="../products/edit/{{this.product_id}}" method="get">
-            <button value={{this.product_id}} class="btn btn-d btn-lg btn-block info-edit-btn">
-              <div class="text-center info-edit">Edit</div>
-            </button>
+            <div class="text-center info-edit"><button value={{this.product_id}} class="btn btn-d btn-lg btn-block info-edit-btn">
+                Edit
+              </button></div>
           </form>
         </div>
       </div>
@@ -88,13 +89,16 @@
     <div class="col-sm-3">
       <div class="panel">
         <div class="panel-body posted-products">
-          {{!-- <button onclick="deleteTab(this)" class='clsDeleteGoal pull-right' value={{this.product_id}}></span></button> --}}
-          <span>
-            <div class="info-pro-name">{{this.p_name}}</div>
-          </span>
-          <span>
-            <div class="info-pro-price">${{this.price}}</div>
-          </span>
+          {{!-- <button onclick="deleteTab(this)" class='clsDeleteGoal pull-right' value={{this.product_id}}></span></button>
+          --}}
+          <div class="info-pro-name">
+            <span>
+              {{this.p_name}}
+            </span></div>
+          <div class="info-pro-price">
+            <span>
+              ${{this.price}}
+            </span></div>
         </div>
       </div>
     </div>
