--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,15 +16,14 @@
 
                         <div class="form-group">
                             <label for="logname" class="clsformLabel">Username:</label>
-                            <input type="text" class="form-control" id="logname" name="email" placeholder="Username"
-                                required="true">
+                            <input type="text" class="form-control" id="logname" name="email" placeholder="Username" required>
                             <span id="match"></span>
                         </div>
 
                         <div class="form-group">
                             <label for="logpassword" class="clsformLabel">Password:</label>
                             <input type="password" class="form-control" id="logpassword" name="password" placeholder="Password"
-                                required="true" aria-describedby="passwordHelp">
+                                required aria-describedby="passwordHelp">
                             <span id="passwordHelp" class="form-text text-muted" style="display: none;">Please enter a
                                 valid password.</span>
                         </div>
