--- a/views/updateproduct.handlebars
+++ b/views/updateproduct.handlebars
@@ -5,54 +5,50 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8  col-12 jumbotron">
-         <form name="eproductup"action="/products/edit/{{product.product_id}}" method="POST" id="eproductup-form" class="eproductup-form" onsubmit="return validationForm1(this.value)">
+         <form name="eproductup" action="/products/edit/{{product.product_id}}" method="POST" id="eproductup-form" class="eproductup-form" onsubmit="return validationForm1(this.value)">
           <div class="form-group">
-            <label for="eproductup-name">
-              <h2>Product Name:</h2>
+            <label for="eproductup-name" class="clsLabelforFields">
+              Product Name:
             </label>
-            <label for="eproductup-name"></label>
             <input type="text" class="form-control" id="eproductup-name" name="ep_name" placeholder="Name"
               aria-describedby="pnameHelp" value='{{product.p_name}}'>
             <span id="pnameHelp" class="form-text text-muted" style="display: none;">Please enter a valid product name.</span>
           </div>
 
           <div class="form-group">
-            <label for="eproductup-tag">
-              <h2>Tag:</h2>
+            <label for="eproductup-tag" class="clsLabelforFields">
+              Tag:
             </label>
-            <label for="eproductup-tag"></label>
+            
             <input type="text" class="form-control" id="eproductup-tag" name="etags" placeholder="Tag" aria-describedby="tagHelp"
               value={{tag}}>
             <span id="tagHelp" class="form-text text-muted" style="display: none;">Please enter a valid tag.</span>
           </div>
 
           <div class="form-group">
-            <label for="eproductup-price">
-              <h2>Price:</h2>
+            <label for="eproductup-price" class="clsLabelforFields">
+              Price:
             </label>
-            <label for="eproductup-price"></label>
             <input type="number" class="form-control" id="eproductup-price" name="eprice" placeholder="Price"
               aria-describedby="priceHelp" value='{{product.price}}'>
             <span id="priceHelp" class="form-text text-muted" style="display: none;">Please enter a valid price.</span>
           </div>
 
           <div class="form-group">
-            <label for="eproductup-quantity">
-              <h2>Quantity:</h2>
+            <label for="eproductup-quantity" class="clsLabelforFields">
+              Quantity:
             </label>
-            <label for="eproductup-quantity"></label>
             <input type="number" class="form-control" id="eproductup-quantity" name="equantity" placeholder="Quantity"
               aria-describedby="quantityHelp" value='{{product.quantity}}'>
             <span id="quantityHelp" class="form-text text-muted" style="display: none;">Please enter a valid quantity.</span>
           </div>
 
           <div class="form-group">
-            <label for="edescription">
-              <h2>Description:</h2>
+            <label for="edescription" class="clsLabelforFields">
+              Description:
             </label>
-            <label for="edescription"></label>
-            <textarea rows="10" cols="100" class="form-control" id="edescription" name="ep_description" placeholder="Description"
-              aria-describedby="descriptionHelp" value='{{product.p_description}}'></textarea>
+            <textarea rows="10" cols="100" class="form-control" id="edescription" name="ep_description" placeholder="Description you woul like to add to existing product"
+              aria-describedby="descriptionHelp"></textarea>
             <span id="descriptionHelp" class="form-text text-muted" style="display: none;">Please enter a description.</span>
           </div>
           <div class="text-center">
