--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -53,7 +53,7 @@
       <div class="panel">
         <div class="panel-body posted-products">
           <div class="info-img">
-            <img src="../{{this.image_path}}" alt="img">
+            <img src="../{{this.image_path}}" alt="{{this.image_name}}">
           </div>
           <label for="info-button"></label>
           <button id="info-button" onclick="deleteTab(this,'{{this.posterId}}')" class='aui_close clsDeleteGoal pull-right'
