--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -11,7 +11,7 @@
                 {{#each products}}
                 <div class="col-sm-4">
                     <div class="products-div">
-                        <img src="../{{this.image_path}}" alt="First slide">
+                        <img src="../{{this.image_path}}" alt="{{this.image_name}}">
                     </div>
                     <h3 class="mg-md">
                         {{this.p_name}}
