--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -108,9 +108,11 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-4">
-                        <h3 class="mg-md bloc-mob-center-text">
-                            AboutUs
-                        </h3><a href="mailto:hanfanw@gmail.com" class="a-btn a-block bloc-mob-center-text">Contact us</a>
+                        <a href="http://localhost:3000/aboutus">
+                            <h3 class="mg-md bloc-mob-center-text">
+                                AboutUs
+                            </h3>
+                        </a><a href="mailto:hanfanw@gmail.com" class="a-btn a-block bloc-mob-center-text">Contact us</a>
                     </div>
                     <div class="col-sm-4">
                         <h3 class="mg-md bloc-mob-center-text">
