--- a/views/postproduct.handlebars
+++ b/views/postproduct.handlebars
@@ -21,13 +21,13 @@
 
         <div class="form-group">
           <label for="productup-price" class="clsLabelforFields">Price:</label>
-          <input type="text" class="form-control" id="productup-price" name="price" placeholder="Price" aria-describedby="priceHelp">
+          <input type="number" class="form-control" id="productup-price" name="price" placeholder="Price" aria-describedby="priceHelp">
           <span id="priceHelp" class="form-text text-muted" style="display: none;">Please enter a valid price.</span>
         </div>
                 
         <div class="form-group">
           <label for="productup-quantity" class="clsLabelforFields">Quantity:</label>
-          <input type="text" class="form-control" id="productup-quantity" name="quantity" placeholder="Quantity" aria-describedby="quantityHelp">
+          <input type="number" class="form-control" id="productup-quantity" name="quantity" placeholder="Quantity" aria-describedby="quantityHelp">
           <span id="quantityHelp" class="form-text text-muted" style="display: none;">Please enter a valid quantity.</span>
         </div>
               
