--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="utf-8" content="HTML, CSS, JavaScript">
+    <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
     <link rel="stylesheet" href="/public/css/site.css">
