Readme file and minor changes

--- a/views/postproduct.handlebars
+++ b/views/postproduct.handlebars
@@ -15,7 +15,7 @@
         
         <div class="form-group">
           <label for="productup-tag" class="clsLabelforFields">Tag:</label>
-          <input type="text" class="form-control" id="productup-tag" name="tags" placeholder="Tag" aria-describedby="tagHelp" >
+          <input type="text" class="form-control" id="productup-tag" name="tags" placeholder="Please enter comma seperated tags" aria-describedby="tagHelp" >
           <span id="tagHelp" class="form-text text-muted" style="display: none;">Please enter a valid tag.</span>
         </div>
 
