--- a/views/updateproduct.handlebars
+++ b/views/updateproduct.handlebars
@@ -21,7 +21,7 @@
               Tag:
             </label>
             
-            <input type="text" class="form-control" id="eproductup-tag" name="etags" placeholder="Tag" aria-describedby="tagHelp"
+            <input type="text" class="form-control" id="eproductup-tag" name="etags" placeholder="Please enter comma seperated tags" aria-describedby="tagHelp"
               value={{tag}}>
             <span id="tagHelp" class="form-text text-muted" style="display: none;">Please enter a valid tag.</span>
           </div>
